Multiple Suggest-Fields per Form

--- a/location-application/location-webapp/src/main/java/de/rittelfischer/webapp/forms/autosuggest/AutoSuggestTextField.html
+++ b/location-application/location-webapp/src/main/java/de/rittelfischer/webapp/forms/autosuggest/AutoSuggestTextField.html
@@ -17,7 +17,7 @@
       <script type="text/javascript" wicket:id="config"></script>
          
          
-      <div wicket:id="suggestionWrapper">
+      <div wicket:id="suggestionWrapper" style="display: inline">
           <input type="text" wicket:id="suggestionField" autocomplete="off" />
       </div>
   
