--- a/location-application/location-webapp/src/main/java/de/rittelfischer/webapp/pages/HomePage.html
+++ b/location-application/location-webapp/src/main/java/de/rittelfischer/webapp/pages/HomePage.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Proof of Concept</title>
-                <link href="css/style.css" type="text/css" rel="stylesheet"/>
+                <link href="css/autosuggest.css" type="text/css" rel="stylesheet"/>
 	</head>
 	<body>
             <div>
