--- a/location-application/location-webapp/src/main/java/de/rittelfischer/webapp/panel/InserLocationFormPanel.html
+++ b/location-application/location-webapp/src/main/java/de/rittelfischer/webapp/panel/InserLocationFormPanel.html
@@ -25,7 +25,7 @@
                     <fieldset>
                         <legend>Brauchen</legend>
           <ul>
-              <li wicket:id="needs"> Benötige: <input type="text" wicket:id="need"/></li>
+              <li wicket:id="needs"> Benötige: <div wicket:id="need" style="display: inline"/></li>
           </ul>
           <button wicket:id="add">Add Another</button>
           </fieldset>               
